--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+.topbar {
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    height: 50px;
+    background-color: #0077BD;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
+    -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    color: aliceblue;
+}
