--- a/src/app/app.menu.component.html
+++ b/src/app/app.menu.component.html
@@ -1,6 +1,2 @@
-<p-menubar [model]="items" [autoDisplay]="false">
-    <div>
-        <input type="text" pInputText placeholder="Search">
-        <button pButton label="Logout" icon="fa fa-sign-out" style="margin-left:.25em"></button>
-    </div>
-</p-menubar>
+<p-menu #menu [popup]="true" [model]="items"></p-menu>
+<button type="button" pButton icon="pi pi-bars" (click)="menu.toggle($event)"></button>
