--- a/src/app/app.menu.component.html
+++ b/src/app/app.menu.component.html
@@ -1,2 +1,11 @@
-<p-menu #menu [popup]="true" [model]="items"></p-menu>
-<button type="button" pButton icon="pi pi-bars" (click)="menu.toggle($event)"></button>
+<!-- <p-menu #menu [popup]="true" [model]="items"></p-menu>
+<button type="button" pButton icon="pi pi-bars" (click)="menu.toggle($event)"></button> -->
+<a [routerLink]="['/']" routerLinkActive="router-link-active" class="link-menu"
+  >Home</a
+>
+<a
+  [routerLink]="['/alunos/inserir']"
+  routerLinkActive="router-link-active"
+  class="link-menu"
+  >Cadastrar</a
+>
