--- a/src/styles.css
+++ b/src/styles.css
@@ -1,41 +1,61 @@
 /* You can add global styles to this file, and also import other style files */
 
 .topbar {
-    position: fixed;
-    z-index: 100;
-    width: 100%;
-    height: 50px;
-    background-color: #0077BD;
-    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
-    -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
-    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-    color: aliceblue;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  height: 50px;
+  background-color: #0593e6;
+  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
+  -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+  color: aliceblue;
 }
 
 .container {
-    margin: 20px;
+  margin: 20px;
 }
 
 label,
 p-radioButton {
-    margin-right: 15px;
-    font-family: sans-serif;
-    color: aliceblue;
+  margin-right: 15px;
+  font-family: sans-serif;
+  color: aliceblue;
 }
 
 h1,
 h3 {
-    font-family: sans-serif;
-    color: aliceblue;
-    padding: 0;
-    margin: 0;
+  font-family: sans-serif;
+  color: aliceblue;
+  padding: 0;
+  margin: 0;
 }
 
 .div1 {
-    background-color: rgb(100, 155, 187);
+  background-color: #0593e6;
+  margin: 20px;
+  border-radius: 10px;
 }
 
-.div2 {
-    background-color: rgb(63, 139, 184);
-    margin: 10px 0;
+body {
+  background-color: #8eabbd;
+}
+
+.input {
+  height: 25px;
+  width: 450px;
+}
+
+.input-date {
+  height: 25px;
+  width: 50px;
+}
+
+.link-menu {
+  color: aliceblue;
+}
+
+.menu {
+  height: 50px;
+  width: 50px;
 }
