--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body,
+div {
+  margin: 0;
+  padding: 0;
+}
 
 .topbar {
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-  height: 50px;
   background-color: #0593e6;
+  display: block;
+  padding: 0;
+  height: 50px;
+  box-sizing: border-box;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9997;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
-  -webkit-box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.26);
-  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-  color: aliceblue;
 }
 
 .container {
@@ -51,11 +59,86 @@ body {
   width: 50px;
 }
 
-.link-menu {
-  color: aliceblue;
+.topbar-menu {
+  display: inline-block;
+  list-style-type: none;
+  float: right;
+  margin: 0 60px 0 0;
+  padding: 0;
+  height: 100%;
 }
 
-.menu {
-  height: 50px;
-  width: 50px;
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+.topbar .logo {
+  margin-left: 45px;
+  margin-top: 5px;
+  display: inline-block;
+  height: 70px;
+  cursor: pointer;
+}
+
+.topbar-menu > li {
+  display: inline-block;
+  height: 100%;
+}
+
+li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
+
+* {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.topbar-menu > li > a {
+  text-decoration: none;
+  color: #fff;
+  transition: background-color 0.2s;
+  min-width: 120px;
+  display: inline-block;
+  text-align: center;
+  box-sizing: border-box;
+  height: 100%;
+  line-height: 50px;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin: 0 5px 0 5px;
+}
+
+a:hover {
+  background-color: #006eff !important;
+  color: rgb(3, 20, 97) !important;
+}
+
+.logout > a:hover {
+  background-color: rgb(240, 101, 101) !important;
+  color: rgb(138, 9, 9) !important;
+}
+
+.card {
+  width: 150px;
+  height: 200px;
+  background-color: rgb(197, 188, 188) !important;
+}
+
+.card-label {
+  color: black;
+  text-align: center;
+}
+
+.fieldset {
+  margin: 20px;
 }
