--- a/src/app/app.topbar.component.html
+++ b/src/app/app.topbar.component.html
@@ -3,7 +3,7 @@
   <ul class="topbar-menu">
     <li>
       <a
-        [routerLink]="['/']"
+        [routerLink]="['/alunos']"
         routerLinkActive="router-link-active"
         class="link-menu"
         >Listar</a
